[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Images/skibidi Steve(1).jpg" type="Texture" id=1]
[ext_resource path="res://fonts/poco/Poco.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Images/GUI pack/Prinbles_GUI_Asset_Silent (1.0.0)/asset/BlankButton.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Factory3.gd" type="Script" id=4]
[ext_resource path="res://Scenes/InfoBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/workPay.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/AchievementPopUp.tscn" type="PackedScene" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Button1" type="TextureButton" parent="."]
margin_left = 78.0
margin_top = 423.0
margin_right = 246.0
margin_bottom = 511.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Button1"]
margin_left = 12.0
margin_top = 5.0
margin_right = 372.0
margin_bottom = 180.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 2 )
text = "ANSWER 1"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Button2" type="TextureButton" parent="."]
margin_left = 474.0
margin_top = 420.0
margin_right = 642.0
margin_bottom = 508.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Button2"]
margin_left = 12.0
margin_top = 5.0
margin_right = 372.0
margin_bottom = 180.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 2 )
text = "ANSWER 2"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Button3" type="TextureButton" parent="."]
margin_left = 882.0
margin_top = 430.0
margin_right = 1050.0
margin_bottom = 518.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Button3"]
margin_left = 12.0
margin_top = 5.0
margin_right = 372.0
margin_bottom = 180.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 2 )
text = "ANSWER 3"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Question" type="TextureRect" parent="."]
margin_left = 297.0
margin_top = 44.0
margin_right = 465.0
margin_bottom = 132.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Question"]
margin_left = 14.0
margin_top = 8.0
margin_right = 365.0
margin_bottom = 172.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 2 )
text = "Question here"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
visible = true
margin_left = 201.0
margin_top = 190.0
margin_right = 1054.0
margin_bottom = 520.0
dialog_text = "                                                                        Du har klaret alle sprgsm√•lene. Tillykke."

[node name="Node2D" parent="." instance=ExtResource( 5 )]
visible = false

[node name="WorkPayControl" parent="." instance=ExtResource( 6 )]
visible = false

[node name="AchievementPopUp" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
